fix(sheet): cell styling
Make sheet-cell to hide overflows not the inner "div".
Set overflow:hidden on the inner div results in a unintended margin under a custom tag,
e.g. tobago-out

--- a/tobago-theme/src/main/scss/_tobago.scss
+++ b/tobago-theme/src/main/scss/_tobago.scss
@@ -1378,7 +1378,7 @@ tobago-sheet {
   overflow: hidden;
 }
 
-.tobago-sheet-cell div {
+.tobago-sheet-cell {
   overflow: hidden;
 }
 
